--- a/b-web-vue/k-web-filterchain/web/web/WEB-INF/web.xml
+++ b/b-web-vue/k-web-filterchain/web/web/WEB-INF/web.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
+
+<!--    &lt;!&ndash;配置多个过滤器&ndash;&gt;
+    <filter>
+        <filter-name>filtera</filter-name>
+        <filter-class>com.jiehfut.filterchain.FilterA</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filtera</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>filterb</filter-name>
+        <filter-class>com.jiehfut.filterchain.FilterB</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filterb</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>filterc</filter-name>
+        <filter-class>com.jiehfut.filterchain.FilterC</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filterc</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>-->
+
+
 </web-app>
