--- a/c-maven/e-maven-trans-a/pom.xml
+++ b/c-maven/e-maven-trans-a/pom.xml
@@ -20,13 +20,22 @@
             <groupId>com.jiehfut</groupId>
             <artifactId>e-maven-trans-b</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <!--依赖排除，该依赖中被排除的依赖就不会进入该项目-->
-           <!-- <exclusions>
-                <exclusion>
+
+
+            <!--依赖排除，该依赖中被排除的依赖就不会进入该项目，只能使用自己的-->
+            <exclusions>
+                 <exclusion>
                     <groupId>com.alibaba</groupId>
                     <artifactId>druid</artifactId>
                 </exclusion>
-            </exclusions>-->
+            </exclusions>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.7</version>
         </dependency>
 
     </dependencies>
