--- a/d-spring/springMVC/pom.xml
+++ b/d-spring/springMVC/pom.xml
@@ -75,6 +75,7 @@
             <version>3.0.12.RELEASE</version>
         </dependency>-->
 
+
         <!--4. Spring6和Thymeleaf整合包-->
         <dependency>
             <groupId>org.thymeleaf</groupId>
@@ -91,6 +92,7 @@
             <version>2.15.2</version>
         </dependency>
 
+
         <!--6. 文件上传时候使用的依赖-->
         <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
         <dependency>
@@ -99,6 +101,23 @@
             <version>1.3.1</version>
         </dependency>
     </dependencies>
+
+
+
+    <build>
+        <!-- jdk17 和 war包版本插件不匹配 -->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.2</version>
+
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
