--- a/d-spring/springMVC/e-springMVC-RESTful/src/main/webapp/WEB-INF/web.xml
+++ b/d-spring/springMVC/e-springMVC-RESTful/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,8 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+
+
     <!--4.配置 springMVC 的前端控制器 DispatcherServlet-->
     <servlet>
         <servlet-name>DispatcherServlet</servlet-name>
@@ -45,13 +47,16 @@
     </servlet-mapping>
 
 
+
     <!--5.配置 HiddenHttpMethodFilter 过滤器：隐藏的 http 的请求方式-->
+    <!--考虑到使用 restful 风格的时候对请求的请求方式有要求，但是浏览器只支持 get && post 两种请求方式-->
+    <!--所以使用过滤器来-->
     <filter>
         <filter-name>HiddenHttpMethodFilter</filter-name>
         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
     </filter>
     <filter-mapping>
-        <!--过滤器的执行顺序是配置的 filter-mapping 顺序决定-->
+        <!--过滤器的执行顺序是该文件中配置的 filter-mapping 顺序决定-->
         <filter-name>HiddenHttpMethodFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
