--- a/d-spring/springMVC/h-springMVC-interceptor/src/main/webapp/WEB-INF/web.xml
+++ b/d-spring/springMVC/h-springMVC-interceptor/src/main/webapp/WEB-INF/web.xml
@@ -22,10 +22,12 @@
         </init-param>
     </filter>
     <filter-mapping>
-        <!--拦截所有请求-->
+        <!--所有请求-->
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+
 
     <!--4.配置 springMVC 的前端控制器 DispatcherServlet-->
     <servlet>
@@ -50,6 +52,7 @@
         <servlet-name>DispatcherServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
 
 
     <!--5.配置 HiddenHttpMethodFilter 过滤器：隐藏的 http 的请求方式-->
