--- a/f-springboot/d-springboot-web-2/src/main/resources/application.properties
+++ b/f-springboot/d-springboot-web-2/src/main/resources/application.properties
@@ -1,21 +1,24 @@
 spring.application.name=d-springboot-web-2
 
 
-# \u4FEE\u6539\u8DEF\u5F84\u5339\u914D\u7B56\u7565\uFF08\u65B0\u7279\u6027\uFF09
-# 1.\u8001\u7248\u7B56\u7565 ant_path_matcher
+# 修改路径匹配策略（新特性）
+# 1.老版策略 ant_path_matcher
 # spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-# 2.\u65B0\u7248\u7B56\u7565 path_pattern_parser\uFF08\u9ED8\u8BA4\uFF09
+# 2.新版策略 path_pattern_parser（默认）
 spring.mvc.pathmatch.matching-strategy=path_pattern_parser
 
 
 
-# \u5F00\u542F\u57FA\u4E8E\u8BF7\u6C42\u53C2\u6570\u7684\u5185\u5BB9\u534F\u5546\u529F\u80FD\u3002 \u9ED8\u8BA4\u53C2\u6570\u540D\uFF1Aformat\u3002 \u9ED8\u8BA4\u6B64\u529F\u80FD\u4E0D\u5F00\u542F
+# 开启基于请求参数的内容协商功能。 默认参数名：format。 默认此功能不开启
 spring.mvc.contentnegotiation.favor-parameter=true
-# \u6307\u5B9A\u5185\u5BB9\u534F\u5546\u65F6\u4F7F\u7528\u7684\u53C2\u6570\u540D\u3002\u9ED8\u8BA4\u662F format\uFF0C\u73B0\u5728\u53EF\u4EE5\u6539\u6210 type\uFF0C\u82E5\u53C2\u6570 type=xxx\uFF0C\u8FD4\u56DE\u5BF9\u5E94\u7684\u7C7B\u578B
+# 指定内容协商时使用的参数名。默认是 format，现在可以改成 type，若参数 type=xxx，返回对应的类型
 spring.mvc.contentnegotiation.parameter-name=type
-# \u914D\u7F6E springboot \u652F\u6301 yaml \u8FD4\u56DE
+# 配置 springboot 支持 yaml 返回
 spring.mvc.contentnegotiation.media-types.yaml=application/yaml
 
-# \u81EA\u5DF1\u914D\u7F6E\u4E00\u5957\u7EC4\u4EF6\uFF0C
+# 自己配置一套组件，
+
+
+
 
 
