--- a/f-springboot/d-springboot-web-3/src/main/resources/application.properties
+++ b/f-springboot/d-springboot-web-3/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 spring.application.name=d-springboot-web-3
 
 
-# thymeleaf \u7684\u5E38\u7528\u914D\u7F6E\u4FE1\u606F
-# \u89C6\u56FE\u524D\u540E\u7F00\uFF08\u4E0B\u9762\u4E3A\u9ED8\u8BA4\uFF09
+# thymeleaf 的常用配置信息
+# 视图前后缀（下面为默认）
 spring.thymeleaf.prefix=classpath:/templates
 spring.thymeleaf.suffix=.html
 
-# \u5F00\u53D1\u671F\u95F4\u5173\u95ED\u7F13\u5B58\uFF08\u9ED8\u8BA4\u4E3A true \u5F00\u542F\uFF09
+# 开发期间关闭缓存（默认为 true 开启）
 spring.thymeleaf.cache=false
 
-# \u63A7\u5236\u5C42\u8FD4\u56DE\u89C6\u56FE\u5B57\u7B26\u4E32\uFF0Cthymeleaf \u4F1A\u5148\u68C0\u67E5\u6709\u6CA1\u6709\u8BE5\u89C6\u56FE\uFF0C\u6CA1\u6709\u5C31\u62A5\u9519\uFF0C\u53EF\u4EE5\u8BBE\u7F6E\u662F\u5426\u5173\u95ED\u68C0\u67E5
+# 控制层返回视图字符串，thymeleaf 会先检查有没有该视图，没有就报错，可以设置是否关闭检查
 spring.thymeleaf.check-template=true
+
+
+
+
 
 
 
