--- a/f-springboot/d-springboot-web-5/src/main/resources/application.properties
+++ b/f-springboot/d-springboot-web-5/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=d-springboot-web-5
 
 
-# \u670D\u52A1\u5668\u914D\u7F6E\u4FE1\u606F(server \u5F00\u59CB\u7684\u90FD\u662F\u5D4C\u5165\u5F0F\u5BB9\u5668\u7684\u914D\u7F6E-Tomcat\u670D\u52A1\u5668)
+# 服务器配置信息(server 开始的都是嵌入式容器的配置-Tomcat服务器)
 server.port=8080
 # server.address=
 
-# tomcat \u8C03\u4F18\u914D\u7F6E
+# tomcat 调优配置
 server.tomcat.accept-count=100
 
-# \u81EA\u5B9A\u4E49\u4E00\u4E9B\u5C5E\u6027
+# 自定义一些属性
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.time=HH:mm:ss
-
