--- a/f-springboot/d-springboot-web/src/main/resources/application.properties
+++ b/f-springboot/d-springboot-web/src/main/resources/application.properties
@@ -1,34 +1,34 @@
 spring.application.name=d-springboot-web
-# spring web \u4E0B\u9762\u7684\u4E24\u4E2A\u914D\u7F6E
-# 1.\u56FD\u9645\u5316\u6709\u5173\u914D\u7F6E\uFF1A\u56FD\u9645\u5316\u533A\u57DF\u4FE1\u606F
-# 2.\u8D44\u6E90\u4FE1\u606F resources\uFF1A\u9759\u6001\u8D44\u6E90\u7684\u7B56\u7565\u8BBE\u7F6E\uFF08\u5F00\u542F\u3001\u5904\u7406\u94FE\u3001\u7F13\u5B58\uFF09
+# spring web 下面的两个配置
+# 1.国际化有关配置：国际化区域信息
+# 2.资源信息 resources：静态资源的策略设置（开启、处理链、缓存）
 
-# \u5F00\u542F\u9759\u6001\u8D44\u6E90\u6620\u5C04\u89C4\u5219\uFF08\u9ED8\u8BA4 true\uFF09
+# 开启静态资源映射规则（默认 true）
 spring.web.resources.add-mappings=true
-# \u8BBE\u7F6E\u7F13\u5B58
+# 设置缓存
 spring.web.resources.cache.period=6
-# cachecontrol \u91CC\u9762\u662F\u7F13\u5B58\u7684\u8BE6\u7EC6\u914D\u7F6E\uFF08\u5408\u5E76\u9879\u63A7\u5236\uFF09\uFF0C\u4F1A\u8986\u76D6 period
-# \u670D\u52A1\u5668\u544A\u8BC9\u6D4F\u89C8\u5668\u6B64\u8D44\u6E90\u4F1A\u7F13\u5B5812\u79D2\uFF0C12\u79D2\u4EE5\u5185\u7684\u6B64\u8D44\u6E90\u518D\u6B21\u8BF7\u6C42\u4E0D\u7528\u8BBF\u95EE\u670D\u52A1\u5668
+# cachecontrol 里面是缓存的详细配置（合并项控制），会覆盖 period
+# 服务器告诉浏览器此资源会缓存12秒，12秒以内的此资源再次请求不用访问服务器
 spring.web.resources.cache.cachecontrol.max-age=12
 
-# \u8BBE\u7F6E\u5171\u4EAB\u7F13\u5B58
+# 设置共享缓存
 spring.web.resources.cache.cachecontrol.cache-public=true
 
-# \u4F7F\u7528\u8D44\u6E90 use-last-modified \u65F6\u95F4\uFF0C\u6D4F\u89C8\u5668\u518D\u6B21\u8BF7\u6C42\u67D0\u4E2A\u8BF7\u6C42\u8FC7\u7684\u9759\u6001\u8D44\u6E90\u7684\u65F6\u5019
-# \u5148\u53D1\u9001\u4E00\u4E2A\u8BF7\u6C42\u83B7\u53D6\u8BE5\u8BF7\u6C42\u5934\uFF0C\u5982\u679C\u6700\u540E\u4FEE\u6539\u65F6\u95F4\u6CA1\u6709\u53D8\u5316\uFF0C\u8FD4\u56DE 304
+# 使用资源 use-last-modified 时间，浏览器再次请求某个请求过的静态资源的时候
+# 先发送一个请求获取该请求头，如果最后修改时间没有变化，返回 304
 spring.web.resources.cache.use-last-modified=true
 
 
 
 
 
-# \u81EA\u5B9A\u4E49\u9759\u6001\u8D44\u6E90\u7684\u8DEF\u5F84 && \u81EA\u5B9A\u4E49\u7F13\u5B58\u8D44\u6E90\u7684\u89C4\u5219
-# \u81EA\u5B9A\u4E49 webjars \u8BBF\u95EE\u8DEF\u5F84\u524D\u7F00
-# \u5982\uFF1Ahttp://localhost:8080/aaaaa/ant-design__icons-vue/6.0.1/AccountBookFilled.js
+# 自定义静态资源的路径 && 自定义缓存资源的规则
+# 自定义 webjars 访问路径前缀
+# 如：http://localhost:8080/aaaaa/ant-design__icons-vue/6.0.1/AccountBookFilled.js
 spring.mvc.webjars-path-pattern=/aaaaa/**
-# \u914D\u7F6E\u9759\u6001\u8D44\u6E90\u8BBF\u95EE\u524D\u7F00 - 1
+# 配置静态资源访问前缀 - 1
 spring.mvc.static-path-pattern=/static/**
-# \u914D\u7F6E\u9759\u6001\u8D44\u6E90\u8BBF\u95EE - 2 => http://localhost:8080/static/luffy.jpg
+# 配置静态资源访问 - 2 => http://localhost:8080/static/luffy.jpg
 spring.web.resources.static-locations=classpath:/first/,classpath:/second/,classpath:/third/
 
 
