--- a/f-springboot/c-springboot-logging/src/main/resources/application.properties
+++ b/f-springboot/c-springboot-logging/src/main/resources/application.properties
@@ -22,6 +22,7 @@ logging.level.web=debug
 
 # 进行日志文件配置
 # 如果你使用（resources/logback.xml || resources/logback-spring.xml）配置了一些信息，spring会采用你的配置覆盖原本的属性
+# 注意：如果使用上面这两个日志，application.properties 里面的所有的日志设置就不会生效了
 
 # 指定日志文件的路径（默认当前项目路径，存在logging.file.name时候，此配置不起作用；只有路径默认名字是 spring.log）
 # logging.file.path=E:\\code\\springboot_code\\c-springboot-logging\\src\\main\\java\\com\\jiehfut\\cspringbootlogging\\controller
