--- a/g-springcloud/a-cloud-crud/pom.xml
+++ b/g-springcloud/a-cloud-crud/pom.xml
@@ -43,7 +43,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-        <!--persistence-->
+        <!--persistence 持久化工具-->
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
@@ -72,7 +72,10 @@
         </dependency>
     </dependencies>
 
+
+
     <build>
+        <!--构建：自动构建 dao mapper 层-->
         <resources>
             <resource>
                 <directory>${basedir}/src/main/java</directory>
