--- a/g-springcloud/c-cloud-consumer-order-80/src/main/resources/application.yml
+++ b/g-springcloud/c-cloud-consumer-order-80/src/main/resources/application.yml
@@ -2,10 +2,12 @@ server:
   port: 80
 
 
+
 spring:
   application:
     name: cloud-consumer-order # 微服务名称
-  # 第二步：将该微服务入住进我们的 consul 8500 中心，以 cloud-sonsumer-order 为名
+
+  # 第二步：将该微服务入住进我们的 consul 8500 中心，以 cloud-consumer-order 为名
   cloud:
     consul:
       host: localhost
