--- a/g-springcloud/e-cloud-consumer-feign-order-80/src/main/resources/application.yml
+++ b/g-springcloud/e-cloud-consumer-feign-order-80/src/main/resources/application.yml
@@ -30,9 +30,9 @@ spring:
           # 指定超时配置：指定是哪一个微服务，指定优先（优先于上面的全局配置）
           cloud-payment-service:
             #连接超时时间
-            connectTimeout: 20000
+            connectTimeout: 6000
             #读取超时时间
-            readTimeout: 20000
+            readTimeout: 6000
 ###########################################################################
 
       # 3.高级特性三 - 开始进行 Apache HttpClient5 配置（对 openfeign 的原生的代替 - 用来提高发送请求的效率）
@@ -58,9 +58,8 @@ spring:
           enabled: true # 没开分组永远不用分组的配置。精确优先、分组次之(开了分组)、默认最后
 
 
-
-
-# 开启 feign 日志以什么级别监控哪一个接口
+#############################################################################
+# 5.高级特性五 - 开启 feign 日志以什么级别监控哪一个接口
 logging:
   level:
     com.jiehfut.cloud.apis.PayFeignApi: debug
