--- a/g-springcloud/i-cloud-alibaba-config-nacos-client-3377/src/main/resources/bootstrap.yml
+++ b/g-springcloud/i-cloud-alibaba-config-nacos-client-3377/src/main/resources/bootstrap.yml
@@ -9,10 +9,13 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848 # Nacos服务注册中心地址，注册进这个服务
+        # Nacos服务注册中心地址，注册进这个服务
+        server-addr: localhost:8848
       config:
-        server-addr: localhost:8848 # Nacos作为配置中心地址，从这个服务拿取配置信息
+        # Nacos作为配置中心地址，从这个服务拿取配置信息
+        server-addr: localhost:8848
         file-extension: yaml # 指定yaml格式的配置
+
         # 声明分组 - 从 nacos 的哪一个分组里面获取信息
         group: PROD_GROUP
         namespace: Prod_Namespace
