--- a/g-springcloud/e-cloud-consumer-feign-order-80/src/main/resources/application.yml
+++ b/g-springcloud/e-cloud-consumer-feign-order-80/src/main/resources/application.yml
@@ -152,7 +152,7 @@ resilience4j:
       default:
         limitForPeriod: 2 #在一次刷新周期时间内，允许执行的最大请求数
         limitRefreshPeriod: 1s # 限流器每隔 limitRefreshPeriod 刷新一次，将允许处理的最大请求数量重置为 limitForPeriod
-        timeout-duration: 1 # 线程等待权限的默认等待时间，
+        timeout-duration: 1 # 线程等待权限的默认等待时间
     instances:
       cloud-payment-service:
         baseConfig: default
