--- a/h-redis/b-redis-template/src/main/resources/application.properties
+++ b/h-redis/b-redis-template/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-spring.application.name=b-redis-template
-
-server.port=7777
-
 # ========================logging=====================
 logging.level.root=info
 logging.level.com.atguigu.redis7=info
@@ -12,14 +8,14 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger- %ms
 
 # ========================swagger=====================
 spring.swagger2.enabled=true
-#\u5728springboot2.6.X\u7ED3\u5408swagger2.9.X\u4F1A\u63D0\u793AdocumentationPluginsBootstrapper\u7A7A\u6307\u9488\u5F02\u5E38\uFF0C
-#\u539F\u56E0\u662F\u5728springboot2.6.X\u4E2D\u5C06SpringMVC\u9ED8\u8BA4\u8DEF\u5F84\u5339\u914D\u7B56\u7565\u4ECEAntPathMatcher\u66F4\u6539\u4E3APathPatternParser\uFF0C
-# \u5BFC\u81F4\u51FA\u9519\uFF0C\u89E3\u51B3\u529E\u6CD5\u662Fmatching-strategy\u5207\u6362\u56DE\u4E4B\u524Dant_path_matcher
+#在springboot2.6.X结合swagger2.9.X会提示documentationPluginsBootstrapper空指针异常，
+#原因是在springboot2.6.X中将SpringMVC默认路径匹配策略从AntPathMatcher更改为PathPatternParser，
+# 导致出错，解决办法是matching-strategy切换回之前ant_path_matcher
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-# ========================redis\u5355\u673A=====================
+# ========================redis单机=====================
 spring.data.redis.database=0
-# \u4FEE\u6539\u4E3A\u81EA\u5DF1\u771F\u5B9EIP
+# 修改为自己真实IP
 spring.data.redis.host=192.168.6.102
 spring.data.redis.port=6381
 spring.data.redis.password=959452
