--- a/h-redis/c-redis-cluster/src/main/resources/application.properties
+++ b/h-redis/c-redis-cluster/src/main/resources/application.properties
@@ -13,25 +13,25 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger- %ms
 
 # ========================swagger=====================
 spring.swagger2.enabled=true
-#\u5728springboot2.6.X\u7ED3\u5408swagger2.9.X\u4F1A\u63D0\u793AdocumentationPluginsBootstrapper\u7A7A\u6307\u9488\u5F02\u5E38\uFF0C
-#\u539F\u56E0\u662F\u5728springboot2.6.X\u4E2D\u5C06SpringMVC\u9ED8\u8BA4\u8DEF\u5F84\u5339\u914D\u7B56\u7565\u4ECEAntPathMatcher\u66F4\u6539\u4E3APathPatternParser\uFF0C
-# \u5BFC\u81F4\u51FA\u9519\uFF0C\u89E3\u51B3\u529E\u6CD5\u662Fmatching-strategy\u5207\u6362\u56DE\u4E4B\u524Dant_path_matcher
+#在springboot2.6.X结合swagger2.9.X会提示documentationPluginsBootstrapper空指针异常，
+#原因是在springboot2.6.X中将SpringMVC默认路径匹配策略从AntPathMatcher更改为PathPatternParser，
+# 导致出错，解决办法是matching-strategy切换回之前ant_path_matcher
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 
-# ========================redis\u96C6\u7FA4=====================
+# ========================redis集群=====================
 spring.data.redis.password=959452
-# \u83B7\u53D6\u5931\u8D25 \u6700\u5927\u91CD\u5B9A\u5411\u6B21\u6570
+# 获取失败 最大重定向次数
 spring.data.redis.cluster.max-redirects=3
 spring.data.redis.lettuce.pool.max-active=8
 spring.data.redis.lettuce.pool.max-wait=-1ms
 spring.data.redis.lettuce.pool.max-idle=8
 spring.data.redis.lettuce.pool.min-idle=0
 #############################################################
-#\u652F\u6301\u96C6\u7FA4\u62D3\u6251\u52A8\u6001\u611F\u5E94\u5237\u65B0,\u81EA\u9002\u5E94\u62D3\u6251\u5237\u65B0\u662F\u5426\u4F7F\u7528\u6240\u6709\u53EF\u7528\u7684\u66F4\u65B0\uFF0C\u9ED8\u8BA4false\u5173\u95ED
-#6381\u5B95\u673A\u540E\uFF0C6381\u7684\u69FD\u4F4D\u75316384\u4E0A\u4F4D\uFF0C\u52A8\u6001\u611F\u5E94\uFF0C\u8BBF\u95EE6381\u4E0D\u901A\uFF0C\u7ACB\u523B\u8BBF\u95EE6384
+#支持集群拓扑动态感应刷新,自适应拓扑刷新是否使用所有可用的更新，默认false关闭
+#6381宕机后，6381的槽位由6384上位，动态感应，访问6381不通，立刻访问6384
 spring.data.redis.lettuce.cluster.refresh.adaptive=true
-#\u5B9A\u65F6\u5237\u65B0
+#定时刷新
 spring.data.redis.lettuce.cluster.refresh.period=2000
 ##############################################################
 spring.data.redis.cluster.nodes=192.168.6.200:6381,192.168.6.200:6382,192.168.6.201:6383,192.168.6.201:6384,192.168.6.202:6385,192.168.6.202:6386
